--- a/docker.yml
+++ b/docker.yml
@@ -45,10 +45,10 @@
     - name: "Copying local files"
       copy:
         src:
-          - weatherApp/static/style.css
-          - weatherApp/templates/index.html
-          - weatherApp/templates/result.html
-          - weatherApp/main.py
+          - weatherApp\static\style.css
+          - weatherApp\templates\index.html
+          - weatherApp\templates\result.html
+          - weatherApp\main.py
         dest: "/myfile1/"
 
     - name: Creating container using HTTPD Image
