--- a/docker.yml
+++ b/docker.yml
@@ -45,10 +45,9 @@
     - name: "Copying local files"
       copy:
         src:
-          - /weatherApp/static/style.css
-          - /weatherApp/templates/index.html
-          - /weatherApp/templates/result.html
-          - /weatherApp/main.py
+          - "/home/thezonei/weatherApp/static"
+          - "/home/thezonei/weatherApp/templates"
+          - "/home/thezonei/weatherApp/main.py"
         dest: "/myfile1/"
 
     - name: Creating container using HTTPD Image
