--- a/docker.yml
+++ b/docker.yml
@@ -52,17 +52,17 @@
     - name: "Copying static files"
       copy:
         src: "static/style.css"
-        dest: "/myfile1/"
+        dest: "/var/www/html"
         
     - name: "Copying templates files"
       copy:
         src: "templates/index.html"
-        dest: "/myfile1/"
+        dest: "/var/www/html"
         
     - name: "Copying result html file"
       copy:
         src: "templates/result.html"
-        dest: "/myfile1/"
+        dest: "/var/www/html"
 
     - name: Creating container using HTTPD Image
       docker_container:
