--- a/docker.yml
+++ b/docker.yml
@@ -77,12 +77,10 @@
     - name: Build and tag the Docker image
       docker_image:
         path: "/path/to/docker/context"
-        name: "myusername/my_flask_app"
+        name: "my_flask_app"
         tag: "v1.0"
         source: build
         state: present
-
-
 
     - name: Run Flask app container
       docker_container:
